<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestingPAActivity!</string>
    <string name="app_name">SIGApp mobile</string>
    <string name="gambar_puskesmas">gambar puskesmas</string>
    <string name="alamat">Alamat</string>
    <string name="latitude">Latitude</string>
    <string name="longnitude">Longnitude</string>
    <string name="app_label">search</string>
    <string name="search_hint">search puskesmas</string>
    <string name="jalur_button">lihat jalur</string>
    <string name="telephone">Telephone</string>
    <string name="pelayanan">Pelayanan</string>
    <string name="poli_umum">poli umum</string>
    <string name="poli_umum_image">poli umum image</string>
    <string name="poli_kia_kb">poli KIA/KB</string>
    <string name="poli_kia_image">poli_KIA_image</string>
    <string name="poli_gigi">poli gigi</string>
    <string name="poli_gigi_image">poli_gigi_image</string>
    <string name="poli_tbc">poli TBC</string>
    <string name="poli_tbc_image">poli TBC image</string>
    <string name="rawat_inap">Rawat inap</string>
    <string name="rawat_inap_image">rawat inap image</string>
    <string name="poned">PONED</string>
    <string name="poned_image">poned image</string>
    <string name="ugd">UGD</string>
    <string name="ugd_image">ugd image</string>
    <string name="persalinan">Persalinan</string>
    <string name="persalinan_image">persalinan image</string>
    <string name="konsultasi_pojok_gizi">konsultasi pojok gizi</string>
    <string name="konsultasi_pojok_gizi_image">konsultasi pojok gizi image</string>
    <string name="konsultasi_kesehatan">konsultasi kesehatan</string>
    <string name="laboratorium">laboratorium</string>
    <string name="empty">empty</string>
    <string name="image_bottom">image_bottom</string>
    <string name="about_me">About Me</string>
    <string name="poli_tht">poli THT</string>
    <string name="hari_kerja">Hari Kerja</string>
    <string name="jam_buka">jam buka</string>

</resources>