<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF" >
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu2"
    android:shrinkColumns="*"  
    android:stretchColumns="*">
    <!-- Row 1 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="75dp">
        <TextView
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/puskesmas"
            android:paddingLeft="5dp"  
            android:layout_span="3"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </TableRow>
 		<ImageView
 		    android:id="@+id/imagePuskesmas"
 		    android:layout_width="200dp"
 		    android:layout_height="200dp"
 		    android:layout_marginLeft="10dp"
 		    android:layout_marginRight="10dp"
 		    android:layout_gravity="center_horizontal"
 		    android:src="@drawable/no_image"
 		    android:contentDescription="@string/gambar_puskesmas" />
 
    <!-- Row 3 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/TextView04" 
            android:text="@string/alamat"
            android:layout_weight="1" 
            android:layout_width="10dp"
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/alamat"
            android:layout_weight="1" 
            
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow> 
    <!-- Row 3 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:text="@string/telephone"
            android:layout_weight="1" 
            android:layout_width="10dp"
            
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/telephone"
            android:layout_weight="1" 
            
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow> 
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:text="jam buka:"
            android:layout_weight="1" 
            android:layout_width="10dp"
            
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:text="07.45-14.00"
            android:layout_weight="1" 
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:text="Hari Kerja:"
            android:layout_weight="1" 
            android:layout_width="10dp"
            
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:text="Senin-Sabtu"
            android:layout_weight="1" 
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:text="@string/latitude"
            android:layout_weight="1" 
            android:layout_width="10dp"
            
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/latitude"
            android:layout_weight="1" 
            
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow> 
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:text="@string/longnitude"
            android:layout_weight="1" 
            android:layout_width="10dp"
            
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/longnitude"
            android:layout_weight="1" 
            
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow>
	<!-- Row 1 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:textSize="18dp" 
            android:text="@string/pelayanan"
            android:paddingLeft="5dp"  
            android:layout_span="3"
            android:textColor="#44b1de"
            android:textStyle="bold"/>
 	</TableRow>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp" >
	                <TextView
			            android:text="@string/poli_umum"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>

	                <ImageView
	                    android:id="@+id/poli_umum"
	                    android:layout_width="30dp"
			            android:paddingTop="2dp"
			            android:contentDescription="@string/poli_umum_image" />

	                <TextView
			            android:text="@string/poli_kia_kb"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
	                
	                <ImageView
	                    android:id="@+id/poli_KIA_KB"
	                    android:layout_width="30dp"
			            android:paddingTop="2dp"
			            android:contentDescription="@string/poli_kia_image" />
            </TableRow>
            <TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="5dp" >
			        <TextView
			            android:text="@string/poli_tht"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/poli_tht"
			            android:layout_width="30dp"
			            android:contentDescription="@string/poli_gigi_image"
			            android:paddingTop="2dp" />
			
			        <TextView
			            android:text="@string/poli_tbc"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/poli_TBC"
			            android:layout_width="30dp"
			            android:contentDescription="@string/poli_tbc_image"
			            android:paddingTop="2dp" />
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="5dp" >
			        <TextView
			            android:text="@string/rawat_inap"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/rawat_inap"
			            android:layout_width="30dp"
			            android:contentDescription="@string/rawat_inap_image"
			            android:paddingTop="2dp" />
			
			        <TextView
			            android:text="@string/poned"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/poned"
			            android:layout_width="30dp"
			            android:contentDescription="@string/poned_image"
			            android:paddingTop="2dp" />
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="5dp" >
			        <TextView
			            android:text="@string/ugd"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/ugd"
			            android:layout_width="30dp"
			            android:contentDescription="@string/ugd_image"
			            android:paddingTop="2dp" />
			
			        <TextView
			            android:text="@string/persalinan"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/persalinan"
			            android:layout_width="30dp"
			            android:contentDescription="@string/persalinan_image"
			            android:paddingTop="2dp" />
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="5dp" >
			        <TextView
			            android:text="@string/konsultasi_pojok_gizi"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/konsultasi_pojok_gizi"
			            android:layout_width="30dp"
			            android:contentDescription="@string/konsultasi_pojok_gizi_image"
			            android:paddingTop="2dp" />
			
			        <TextView
			            android:text="@string/konsultasi_kesehatan"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/konsultasi_kesehatan"
			            android:layout_width="30dp"
			            android:contentDescription="@string/konsultasi_kesehatan"
			            android:paddingTop="2dp"/>
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="5dp" >
			        <TextView
			            android:text="@string/laboratorium"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/laboratorium"
			            android:layout_width="30dp"
			            android:contentDescription="@string/laboratorium"
			            android:layout_gravity="center_vertical" />
			        <TextView
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:contentDescription="@string/empty" />
			</TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
	        android:id="@+id/button_result"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/jalur_button" />
        
    </LinearLayout>
 	
</TableLayout>
</ScrollView>