<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF" >
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"  
    android:stretchColumns="*"
    android:background="#ffffff">
    <!-- Row 1 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:textSize="24dp" 
            android:text="Row 1"
            android:paddingLeft="5dp"  
            android:layout_span="3"
            android:background="#b0b0b0"
            android:textColor="#000"/>
    </TableRow>
 		<ImageView
 		    android:id="@+id/imageView1"
 		    android:layout_width="300dp"
	        android:layout_height="200dp"
 		    android:src="@drawable/no_image" />
 
    <!-- Row 3 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/TextView04" 
            android:text="@string/alamat"
            android:layout_weight="1" 
            android:layout_width="10dp"
            android:background="#b0b0b0"
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/TextView04" 
            android:text="Row 3 column 2"
            android:layout_weight="1" 
            android:background="#a09f9f"
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow> 
    <!-- Row 3 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:id="@+id/TextView04" 
            android:text="@string/telephone"
            android:layout_weight="1" 
            android:layout_width="10dp"
            android:background="#b0b0b0"
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/TextView04" 
            android:text="Row 3 column 2"
            android:layout_weight="1" 
            android:background="#a09f9f"
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow> 
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:id="@+id/TextView04" 
            android:text="@string/latitude"
            android:layout_weight="1" 
            android:layout_width="10dp"
            android:background="#b0b0b0"
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/TextView04" 
            android:text="Row 3 column 2"
            android:layout_weight="1" 
            android:background="#a09f9f"
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow> 
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="3dp">
        <TextView
            android:id="@+id/TextView04" 
            android:text="@string/longnitude"
            android:layout_weight="1" 
            android:layout_width="10dp"
            android:background="#b0b0b0"
            android:textColor="#000000"
            android:gravity="left"
            android:paddingLeft="5dp"/>
 
        <TextView
            android:id="@+id/TextView04" 
            android:text="Row 3 column 2"
            android:layout_weight="1" 
            android:background="#a09f9f"
            android:textColor="#000000"
            android:gravity="left"/>
    </TableRow>
	<!-- Row 1 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:textSize="18dp" 
            android:text="Pelayanan"
            android:paddingLeft="5dp"  
            android:layout_span="3"
            android:textColor="#000"/>
 	</TableRow>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
	                <TextView
			            android:id="@+id/TextView04" 
			            android:text="poli umum"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>

	                <ImageView
	                    android:id="@+id/imageView2"
	                    android:layout_width="30dp"
	                    android:src="@drawable/search" />

	                <TextView
			            android:id="@+id/TextView04" 
			            android:text="poli KIA/KB"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
	                
	                <ImageView
	                    android:id="@+id/imageView2"
	                    android:layout_width="30dp"
	                    android:src="@drawable/search" />
            </TableRow>
            <TableRow
			    android:id="@+id/tableRow5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="poli gigi"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="poli TBC"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			</TableRow>
			<TableRow
			    android:id="@+id/tableRow5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="Rawat inap"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="PONED"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			</TableRow>
			<TableRow
			    android:id="@+id/tableRow5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="UGD"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="Persalinan"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			</TableRow>
			<TableRow
			    android:id="@+id/tableRow5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="konsultasi pojok gizi"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="konsultasi kesehatan"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			        
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			</TableRow>
			<TableRow
			    android:id="@+id/tableRow5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			        <TextView
			            android:id="@+id/TextView04" 
			            android:text="laboratorium"
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:background="#b0b0b0"
			            android:textColor="#000000"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp"
			            android:src="@drawable/search" />
			        <TextView
			            android:id="@+id/TextView04" 
			            android:layout_weight="1" 
			            android:layout_width="10dp"
			            android:gravity="left"
			            android:paddingLeft="5dp"/>
			
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="30dp" />
			</TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
	        android:id="@+id/button_result"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/jalur_button" />
        
    </LinearLayout>
 	
</TableLayout>
</ScrollView>